--- a/docs/전시/_posts/2024-10-05-배다리에-사는-사람.md
+++ b/docs/전시/_posts/2024-10-05-배다리에-사는-사람.md
@@ -14,7 +14,7 @@ info: "2024-10-05 ~ 2024-10-27, 인천 삼성서림"
 
 [배다리에 사는 사람 - 촬영일지](/전시/2024/10/05/배다리에-사는-사람.html#촬영일지)
 
-*\*이 전시는 인천 동구청에서 지원하고 패치워크가 주관한 공공미술 프로젝트인 \<배다리 인디펜던트\>의 일환으로 진행되었습니다.*
+*\*이 전시는 인천 동구청에서 지원하고 패치워크가 주관한 공공예술 프로젝트인 \<배다리 인디펜던트\>의 일환으로 진행되었습니다.*
 
 ***
 
