--- a/docs/전시/_posts/2024-10-05-배다리에-사는-사람.md
+++ b/docs/전시/_posts/2024-10-05-배다리에-사는-사람.md
@@ -4,7 +4,7 @@ title:  "배다리에 사는 사람"
 desc:
 info: "2024-10-05 ~ 2024-10-27, 인천 삼성서림"
 ---
-{% include youtube.html id=AE7jhFrJAvM %}
+{% include youtube.html id="AE7jhFrJAvM?si=KnCrNj4W1-AyqJa_" %}
 
 인천 배다리 지역의 몇몇 장소들과 그곳의 사람들을 한 달 동안 촬영하고, 그 영상과 소리를 확률적으로 변조하여 만든 음악을 배다리에 위치한 헌책방인 삼성서림에 설치된 모니터와 스피커를 통해 재생하였다. 그리고 촬영 기간 동안에 기록한 촬영일지를 소책자로 만들어 전시 공간에 함께 비치해 두었다. 또한 헌책방 안에 센서를 설치하여, 사람들의 움직임에 따라 음악이 진행을 멈추거나 처음으로 돌아가도록 하였다.
 
